--- a/public/assets/index.html
+++ b/public/assets/index.html
@@ -61,8 +61,8 @@
   </script>
 
   <script src="/js/jquery-1.9.1.js"></script>
-  <script src="/js/handlebars-1.0.0-rc.4.js"></script>
-  <script src="/js/ember-1.0.0-rc.6.1.js"></script>
+  <script src="/js/handlebars-1.0.js"></script>
+  <script src="/js/ember-1.1.2.js"></script>
   <script src="/js/bootstrap.min.js"></script>
   <script src="/assets/app.js"></script>
 
