serve the files as 1

--- a/public/assets/index.html
+++ b/public/assets/index.html
@@ -64,7 +64,7 @@
   <script src="/js/handlebars-1.0.js"></script>
   <script src="/js/ember-1.1.2.js"></script>
   <script src="/js/bootstrap.min.js"></script>
-  <script src="/assets/app.js"></script>
+  <script src="/assets/_app.js"></script>
 
 </body>
 </html>
